objects/Task_Assignee_Template__c.object
<CustomObject>
    <fields>
        <fullName>All_Task_Assignee_Id__c</fullName>
        <label>All Task Assignee Id</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignee_Type__c</fullName>
        <label>Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscribe_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Subscribe Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Assignee_Email__c</fullName>
        <label>Task Assignee Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Assignee_Id__c</fullName>
        <label>Task Assignee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Assignee__c</fullName>
        <label>Task Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Template</label>
        <referenceTo>Task_Template__c</referenceTo>
        <relationshipLabel>Task Assignee Template</relationshipLabel>
        <relationshipName>Task_Assignee_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task Assignee Template</label>
    <nameField>
        <displayFormat>TAT-{0000}</displayFormat>
        <label>Task Assignee Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Assignee Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>